--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <p>hello , my name is Anh 
-        
+
     </p>
+    <img src="40103474_906040526271807_2903701825456701440_n.jpg" alt="">
     
 </body>
 </html>
