--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>hello , my name is Anh 
 
     </p>
-    <img src="37646976_2145783802411505_2117288554735337472_n.jpg" alt="">
+    <img src="image/01.jpg" alt="">
     
 </body>
 </html>
